Thu Sep 10 12:17:28 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_build_from_ary_body): register cdhash to the
	  iseq constant body instead of compile time mark array, not to
	  get GCed.  [ruby-core:70708] [Feature #8543]

Wed Sep  9 18:16:14 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/rubygems/stub_specification.rb (Gem::StubSpecification#data):
	  should not change the value of $. when `require`ing gems.
	  this fixed test failures introduced by r51813.

Wed Sep  9 16:55:45 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ruby.c (usage, enable_option, disable_option, process_options): new
	  option `--disable-did_you_mean`.

	* gem_prelude.rb: now requires did_you_mean gem by default if available.

Wed Sep  9 13:38:56 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/extlibs.rb (do_patch): let "patch" command change the
	  working directory and open the patch file there, instead of
	  spawn options, so that proper error message will be shown by the
	  command not just "chdir" or "open".

Wed Sep  9 11:33:05 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* common.mk (update-gems): use BASERUBY instead of RUNRUBY.

Wed Sep  9 11:08:59 2015  Zachary Scott  <zzak@ruby-lang.org>

	* lib/delegate.rb: Remove backtrace cleaning for delegated methods
          This patch was provided by Rafael França and greatly improves
          performance when an exception is raised. [Bug #11461]

Wed Sep  9 10:05:41 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* test/rubygems/test_config.rb: fix broken tests for Windows platform.

Wed Sep  9 07:46:32 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rubygems: Update to RubyGems HEAD(fe61e4c112).
	  this version contains new feature that warn invalid SPDX license
	  identifiers. https://github.com/rubygems/rubygems/pull/1249
	  and #1032, #1023, #1332, #1328, #1306, #1321, #1324
	* test/rubygems: ditto.

Tue Sep  8 23:17:36 2015  Yuki Nishijima  <mail@yukinishijima.net>
